
  [ Andreas Warnke ]
  * Export of png and svg diagrams and txt descriptions
  * DB format changed: classifier.name is UNIQUE, features.key is UNIQUE
    (compatible change)

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun Dec 11 00:08:44 2016 +0100

crystal-facet-uml (0.7.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * The user can move classifiers

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat Nov 26 20:49:29 2016 +0100

crystal-facet-uml (0.6.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * cut+copy+paste allow to copy diagrams and classifiers to and from the
    clipboard

 -- Andreas Warnke <cfu@andreaswarnke.de>  Thu Oct 6 21:27:21 2016 +0200

crystal-facet-uml (0.5.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * The program integrates into a freedesktop.org desktop
  * rpm and deb installers are generated
  * undo/redo works for creating, modifying and deleting objects

 -- Andreas Warnke <cfu@andreaswarnke.de>  Fri Aug 12 05:56:31 2016 +0200

crystal-facet-uml (0.4.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * The user can delete classifiers and diagrams
  * DB format incompatible to version 0.3.0
    (todo: in diagramelements,
    manually create the column "display_flags" as INTEGER)

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun Jul 3 11:52:47 2016 +0200

crystal-facet-uml (0.3.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * The user can select and switch the database file

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun May 22 15:22:46 2016 +0200

crystal-facet-uml (0.2.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * The user can create and rename classifiers like classes
  * DB format incompatible to version 0.01

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun May 1 22:51:16 2016 +0200

crystal-facet-uml (0.1.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * The user can create, rename and navigate diagrams

 -- Andreas Warnke <cfu@andreaswarnke.de>  Thu Mar 31 20:28:08 2016 +0200